<resources>
    <string name="app_name">Porter-1</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_userName">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User ?</string>
    <string name="register">Register</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_order_registration">OrderRegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>