<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:paddingBottom="80dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/enter_first_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/enter_last_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/enter_userName">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_userName"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:endIconMode="password_toggle"
                android:hint="@string/enter_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/enter_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/enter_phone_no">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_phone_no"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6sp"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>