<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.signIn.SignInFragment"
    android:padding="12sp"
    android:background="@color/white"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/enter_userName">
        <com.google.android.material.textfield.TextInputEditText
            android:maxLength="15"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/enter_userName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_userName"
            android:maxLength="15"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        app:endIconMode="password_toggle"
        android:hint="@string/enter_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_marginTop="6sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_gravity="center"
            android:textColor="@color/black"/>
    <Button
        android:id="@+id/button_create_account"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="500sp"
        android:src="@drawable/porter_login_img"/>

</androidx.appcompat.widget.LinearLayoutCompat>